style: fix element position to align items always on center

--- a/src/components/CommunitySchedules/styles.module.scss
+++ b/src/components/CommunitySchedules/styles.module.scss
@@ -11,12 +11,14 @@
   margin-top: toRem(40);
   font-family: $titleFont;
   font-size: toRem($textSizeLarge);
+  text-transform: capitalize;
   padding-bottom: $mobileBodyMargin;
 }
 
 .schedule__container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   padding-bottom: 10px;
   padding-top: 10px;
